# Recruitment-Assistant-Application

./: .env.example  .gitignore  AGENTS.md  CHECKLIST.md  README.md  opencode.json
.github/workflows/: ci.yml
.opencode/agents/: backend-eng.md  dev-crew.md  frontend-eng.md  integration-eng.md  product-mgr.md  project-mgr.md  qa-eng.md  system-arch.md
.opencode/commands/: generate-mr.md  generate-prd.md  generate-sad.md  phase-1.md
nextjs-app/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
nextjs-app/src/app/: globals.css  layout.tsx  page.tsx
nextjs-app/src/app/api/chat/: route.ts
nextjs-app/src/app/api/chat/status/: route.ts
nextjs-app/src/app/api/setup/check/: route.ts
nextjs-app/src/app/api/setup/validate/: route.ts
nextjs-app/src/components/: agent-status-panel.tsx  job-description-form.tsx  setup-wizard.tsx
project-context/1.define/: mrd.md  prd.md
project-context/2.build/: architecture-plan.md  frontend-plan.md  integration-notes.md  qa-plan.md  sad.md  sad.v2.md  setup.md
project-context/3.deliver/: architecture-plan.md  phase-3-outline.md  sad.md  setup.md  technical-debt.md
recruitment-assistant/: .env.example  LICENSE  README.md  pyproject.toml
recruitment-assistant/src/recruitment/: __init__.py  crew.py  main.py
recruitment-assistant/src/recruitment/config/: tasks.yaml
recruitment-assistant/src/recruitment/tools/: __init__.py  custom_tools.py
recruitment-assistant/tests/: __init__.py  test_basic.py  test_edge_cases.py  test_integration.py  test_unit.py
scripts/: run_recruitment_sse.py  upgrade.py
src/recruitment/: __init__.py  __main__.py
